--- a/home.less
+++ b/home.less
@@ -1,8 +1,4 @@
-html, body {
-	font-family: "Helvetica Neue", Helvetica, sans-serif;
-	font-weight: 300;
-}
-.page-home {
+body.mod-home {
 	height:100%;
 	background:#f03;
 	color:black;
@@ -12,9 +8,4 @@ html, body {
 	font-size:8vw;
 	letter-spacing: -0.05em;
 	text-align: center;
-}
-
-.page-layoutunits {
-
-
 }
